# Class-Widgets-2

./: .git-cliff.toml  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build&release.yml
assets/images/: logo.icns
assets/locales/: en_US.ts  it.ts  ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
configs/schedules/: default.json
docs/dev/plugin/: index.md
docs/dev/widgets/: index.md
docs/lang/: en_US.md  ja.md
docs/templates/schedule_file/: index.md
examples/schedule/: example.json
scripts/: update.bat  update_ts.sh
src/: __init__.py  app.py
src/core/: __init__.py  central.py  directories.py  widgets.py
src/core/automations/: auto_hide.py  base.py  builtin_tasks.py  manager.py  update_check.py
src/core/config/: __init__.py  manager.py  model.py
src/core/convertor/: converter.py  slots.py
src/core/models/: __init__.py  schedule.py
src/core/notification/: __init__.py  manager.py  model.py  notify.py  provider.py  service.py
src/core/parser/: schedule.py
src/core/plaza/: __init__.py  bridge.py  markdown.py
src/core/plugin/: __init__.py  api.py  base.py  components.py  loader.py  manager.py
src/core/schedule/: __init__.py  editor.py  manager.py  model.py  runtime.py  service.py  swapper.py
src/core/themes/: loader.py  manager.py
src/core/timer/: union_update.py
src/core/updater/: bridge.py  downloader.py  updater.py  workers.py
src/core/utils/: __init__.py  auto_startup.py  tray.py  (+7 more)
src/qml/: MainInterface.qml  WidgetsMain.qml
src/themes/: __init__.py
(+103 files in other folders)
